--- a/src/styletts2/requirements.txt
+++ b/src/styletts2/requirements.txt
@@ -18,3 +18,4 @@ git+https://github.com/resemble-ai/monotonic_align.git
 gruut>=2.3.4
 gruut-ipa>=0.13.0
 gruut-lang-en>=2.0.0
+pip install phonemizer
